add skipWrapper attribute to template-part block

--- a/parts/header.html
+++ b/parts/header.html
@@ -3,10 +3,11 @@ wp:group {
     "className": "site-header",
     "layout": {
         "type": "constrained"
-    }
+    },
+    "tagName": "header"
 }
 -->
-<div id="masthead" class="wp-block-group site-header">
+<header id="masthead" class="wp-block-group site-header">
     <!--
     wp:group {
         "className": "site-header__inner",
@@ -45,5 +46,5 @@ wp:group {
         <!-- /wp:buttons -->
     </div>
     <!-- /wp:group -->
-</div>
+</header>
 <!-- /wp:group -->
