build front page template

--- a/parts/footer.html
+++ b/parts/footer.html
@@ -10,6 +10,7 @@ wp:group {
 <footer id="colophon" class="wp-block-group site-footer">
     <!--
     wp:group {
+        "align": "wide",
         "className": "site-footer__inner",
         "layout": {
             "type": "flex",
@@ -18,7 +19,7 @@ wp:group {
         }
     }
     -->
-    <div class="wp-block-group site-footer__inner">
+    <div class="wp-block-group alignwide site-footer__inner">
         <!-- wp:site-logo /-->
 
         <!-- create-wordpress-plugin:theme-navigation {"menuLocation": "footer"} -->
