--- a/parts/header.html
+++ b/parts/header.html
@@ -10,6 +10,7 @@ wp:group {
 <header id="masthead" class="wp-block-group site-header">
     <!--
     wp:group {
+        "align": "wide",
         "className": "site-header__inner",
         "layout": {
             "type": "flex",
@@ -17,7 +18,7 @@ wp:group {
         }
     }
     -->
-    <div class="wp-block-group site-header__inner">
+    <div class="wp-block-group alignwide site-header__inner">
         <!-- wp:site-logo /-->
 
         <!-- create-wordpress-plugin:theme-navigation {"menuLocation": "header"} -->
