--- a/parts/footer.html
+++ b/parts/footer.html
@@ -22,7 +22,7 @@ wp:group {
     <div class="wp-block-group alignwide site-footer__inner">
         <!-- wp:site-logo /-->
 
-        <!-- wp:create-wordpress-plugin/theme-navigation {"menuLocation": "header"} /-->
+        <!-- wp:create-wordpress-plugin/theme-navigation {"menuLocation": "footer"} /-->
 
         <!-- wp:social-links -->
         <ul class="wp-block-social-links has-icon-color has-icon-background-color is-style-default">
